// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack loader should convert file (babel: false) 1`] = `
"import React from \\"react\\";

const SvgComponent = () => React.createElement(\\"svg\\", {
  width: 88,
  height: 88,
  viewBox: \\"0 0 88 88\\"
}, React.createElement(\\"title\\", null, \\"Dismiss\\"), React.createElement(\\"g\\", {
  stroke: \\"#063855\\",
  strokeWidth: 2,
  fill: \\"none\\",
  fillRule: \\"evenodd\\",
  strokeLinecap: \\"square\\"
}, React.createElement(\\"path\\", {
  d: \\"M51 37L37 51M51 51L37 37\\"
})));

export default SvgComponent;"
`;

exports[`webpack loader should convert file 1`] = `
"import React from \\"react\\";

var _ref = React.createElement(\\"svg\\", {
  width: 88,
  height: 88,
  viewBox: \\"0 0 88 88\\"
}, React.createElement(\\"title\\", null, \\"Dismiss\\"), React.createElement(\\"g\\", {
  stroke: \\"#063855\\",
  strokeWidth: 2,
  fill: \\"none\\",
  fillRule: \\"evenodd\\",
  strokeLinecap: \\"square\\"
}, React.createElement(\\"path\\", {
  d: \\"M51 37L37 51M51 51L37 37\\"
})));

var SvgComponent = function SvgComponent() {
  return _ref;
};

export default SvgComponent;"
`;
